@@ -4,8 +4,8 @@
 
 
 cleanBadInstall() {
-	if [ -d "/opt/shibboleth-identityprovider" ]; then
-		rm -rf /opt/shibboleth-identityprovider*
+	if [ -d "/opt/${shibDir}" ]; then
+		rm -rf /opt/${shibDir}*
 	fi
 	if [ -d "/opt/cas-client-${casVer}" ]; then
 		rm -rf /opt/cas-client-${casVer}
@@ -16,8 +16,8 @@ cleanBadInstall() {
 	if [ -d "/opt/shibboleth-idp" ]; then
 		rm -rf /opt/shibboleth-idp
 	fi
-	if [ -d "/opt/mysql-connector-java-${mysqlConVer}/" ]; then
-		rm -rf /opt/mysql-connector-java-${mysqlConVer}/
+	if [ -d "/opt/mysql-connector-java-5.1.27" ]; then
+		rm -rf /opt/mysql-connector-java-5.1.27
 	fi
 	if [ -f "/usr/share/tomcat6/lib/tomcat6-dta-ssl-1.0.0.jar" ]; then
 		rm /usr/share/tomcat6/lib/tomcat6-dta-ssl-1.0.0.jar
@@ -54,6 +54,22 @@ installDependanciesForInstallation ()
 	${Echo} "Done."
 }
 
+patchFirewall()
+{
+        #Replace firewalld with iptables (Centos7)
+        if [ "${dist}" == "centos" -a "${redhatDist}" == "7" ]; then
+                systemctl stop firewalld
+                systemctl mask firewalld
+                eval "yum -y install iptables-services" >> ${statusFile} 2>&1
+                systemctl enable iptables
+                systemctl start iptables
+
+	elif [ "${dist}" == "ubuntu" ]; then
+		DEBIAN_FRONTEND=noninteractive apt-get install -y iptables-persistent	
+        fi
+
+}
+
 fetchJavaIfNeeded ()
 
 {
@@ -84,104 +100,182 @@ setVarUpgradeType ()
 
 {
 
-	if [ -L "/opt/shibboleth-identityprovider" -a -d "/opt/shibboleth-idp" ]; then
+	if [ -d "/opt/shibboleth-idp" ]; then
 		upgrade=1
 	fi
-
 }
 
 setVarPrepType ()
 
 {
-	prep="prep/${type}"
+prep="prep/${type}"
+
 }
 
 setVarCertCN ()
 
 {
-	if [ "`echo "${idpurl: -1}"`" = "/" ]; then
-		idpurl=`echo ${idpurl%?}`
-	fi
-	certCN=`${Echo} ${idpurl} | cut -d/ -f3`
+certCN=`${Echo} ${idpurl} | cut -d/ -f3`
+
+}
+setVarIdPScope ()
+{
+
+	idpScope="${freeRADIUS_realm}"
 }
 
 setJavaHome () {
 
-	# force the latest java onto the system to ensure latest is available for all operations.
-	# including the calculation of JAVA_HOME to be what this script sees on the system, not what a stale environment may have
+        # force the latest java onto the system to ensure latest is available for all operations.
+        # including the calculation of JAVA_HOME to be what this script sees on the system, not what a stale environment may have
 
-	unset JAVA_HOME
+        # June 23, 2015, altering java detection behaviour to be more platform agnostic
 
-		${Echo} "Installing Java OpenJDK packages ..."
-		#${Echo} "Live logging can be seen by this command in another window: tail -f ${statusFile}"
-		eval ${distCmd2} &> >(tee -a ${statusFile})
-		eval ${distCmd3} &> >(tee -a ${statusFile})
-		${Echo} "Done."
+	if [ -L "/usr/java/default" -a -d "/usr/java/jre${javaVer}" ]; then
+		
+                export JAVA_HOME=/usr/java/default
+                ${Echo} "Detected Java allready installed in ${JAVA_HOME}."
 
-	javaBin=`which java`
-	if [ -z "${JAVA_HOME}" ]; then
-		# check java
-		if [ -L "${javaBin}" ]; then
-			# the '/bin' is used to ensure the tail end of the JAVA_HOME string is not terminated in a /
-			# if it is, the rest of the paths used downstream will be .....//jre/bin which mean the paths are not found
-
-			export JAVA_HOME=`readlink -f ${javaBin} | awk -F'bin' '{print $1}'`
-		else
-			if [ -s "${javaBin}" ]; then
-				export JAVA_HOME=`${javaBin} -classpath ${Spath}/files/ getJavaHome`
-			else
-				${Echo} "No java found, please install JRE"
-				cleanBadInstall
-			fi
-		fi		
-	fi
-
-	#insulate against invalid javahome with trailing slash
-	JAVA_HOME="${JAVA_HOME%/}"
-	echo "***javahome is: ${JAVA_HOME}"
-
-	# validate java_home and ensure it runs as expected before going any further
-	${JAVA_HOME}/bin/java -version >> ${statusFile} 2>&1
-
-	retval=$?
-	if [ "${retval}" -ne 0 ]; then
-		${Echo} "\nAn error has occurred in the configuration of the JAVA_HOME variable."
-		${Echo} "Please review the java installation and status.log to see what went wrong."
-		${Echo} "Install is aborted until this is resolved."
-		cleanBadInstall
-		exit
+				# return 0  This is not accurate, we need to prepare the host for java settings regardless.
 	else
 
-		${Echo} "JAVA_HOME version verified as good."
-		jEnvString="export JAVA_HOME=${JAVA_HOME}"
-		
-		 if [ -z "`grep 'JAVA_HOME' /root/.bashrc`" ]; then
-		 	
-		 	 ${Echo} "${jEnvString}" >> /root/.bashrc
-			 ${Echo} "JAVA_HOME added to end of /root/.bashrc"
-		
-		 else
+		${Echo} "Java not detected, downloading and installing.."
 
-	 	 	 ${Echo} "${jEnvString}" >> /root/.bashrc
-			 ${Echo} "***EXISTING JAVA_HOME DETECTED AND OVERRIDDEN!***"
-			 ${Echo} "A new JAVA_HOME has been appended to end of /root/.bashrc to ensure the latest javahome is used. Hand edit as needed\n"
-			
-		 fi
+        unset JAVA_HOME
 
-	fi
+        #Install from src
+        javaSrc="jre-8u25-linux-x64.tar.gz"
+        if [ ! -s "${downloadPath}/${javaSrc}" ]; then
+                ${fetchCmd} ${downloadPath}/${javaSrc} -j -L -H "Cookie: oraclelicense=accept-securebackup-cookie"  https://download.oracle.com/otn-pub/java/jdk/8u25-b17/${javaSrc} >> ${statusFile} 2>&1
+        fi
+        mkdir /usr/java
+        tar xzf ${downloadPath}/${javaSrc} -C /usr/java/
+        ln -s /usr/java/jre${javaVer}/ /usr/java/latest
+        ln -s /usr/java/latest /usr/java/default
+        export JAVA_HOME="/usr/java/default"
+		export PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+        #Set the alternatives
+        for i in `ls $JAVA_HOME/bin/`; do rm -f /var/lib/alternatives/$i;update-alternatives --install /usr/bin/$i $i $JAVA_HOME/bin/$i 100; done
+        for i in `ls $JAVA_HOME/bin/`;do update-alternatives --set $i $JAVA_HOME/bin/$i; done
 
+        echo "***javahome is: ${JAVA_HOME}"
+        # validate java_home and ensure it runs as expected before going any further
+        
+    fi
+
+    	# Regardless of origin, let's validate it's existence then ensure it's in our .bashrc and our path
+
+
+        ${JAVA_HOME}/bin/java -version >> ${statusFile} 2>&1
+		retval=$?
+
+        if [ "${retval}" -ne 0 ]; then
+                ${Echo} "\n\n\nAn error has occurred in the configuration of the JAVA_HOME variable."
+                ${Echo} "Please review the java installation and status.log to see what went wrong."
+                ${Echo} "Install is aborted until this is resolved."
+                cleanBadInstall
+                exit
+        else
+
+                ${Echo} "\n\n\n JAVA_HOME version verified as good."
+                jEnvString="export JAVA_HOME=${JAVA_HOME}"
+
+                 if [ -z "`grep 'JAVA_HOME' /root/.bashrc`" ]; then
+
+                         ${Echo} "${jEnvString}" >> /root/.bashrc
+                         ${Echo} "\n\n\n JAVA_HOME added to end of /root/.bashrc"
+
+                 else
+
+                         ${Echo} "${jEnvString}" >> /root/.bashrc
+                         ${Echo} "\n\n\n ***EXISTING JAVA_HOME DETECTED AND OVERRIDDEN!***"
+                         ${Echo} "\n A new JAVA_HOME has been appended to end of /root/.bashrc to ensure the latest javahome is used. Hand edit as needed\n\n"
+
+                 fi
+
+                 # Ensure the java is in our execution path both in execution AND in the .bashrc
+                 
+                 jEnvPathString="export PATH=${PATH}:${JAVA_HOME}/bin"
+                 ${Echo} "${jEnvPathString}" >> /root/.bashrc
+                 ${Echo} "\n\n\n Updated PATH to add java bin dir at end of /root/.bashrc"
+
+                 export PATH=${PATH}:${JAVA_HOME}/bin
+
+        fi
 
 }
 
 setJavaCACerts ()
+
 {
-	# 	set path to ca cert file
-	if [ -f "/etc/ssl/certs/java/cacerts" ]; then
-		javaCAcerts="/etc/ssl/certs/java/cacerts"
-	else
-		javaCAcerts="${JAVA_HOME}/lib/security/cacerts"
-	fi
+        javaCAcerts="${JAVA_HOME}/lib/security/cacerts"
+        keytool="${JAVA_HOME}/bin/keytool"
+	
 }
+
+
+setJavaCryptographyExtensions ()
+{
+# requires that Oracle's java is already installed in the system and will auto-accept the license.
+# download instructions are found here: http://www.oracle.com/technetwork/java/javase/downloads/jce8-download-2133166.html
+#
+# because they are crypto settings, this function is abstracted out
+
+	${Echo} "Setting Java Cryptography Extensions to unlimited strength" | tee -a ${statusFile}
+
+# Backup originals
+	JCEBkp1="local_policy.jar"
+	JCEBkp2="US_export_policy.jar"
+	JCEBkpPostfix=`date +%F-%s`
+	${Echo} "Backing up ${JCEBkp1} and ${JCEBkp1} from ${JAVA_HOME} to ${Spath}/backups" | tee -a ${statusFile}
+	eval "cp ${JAVA_HOME}/lib/security/${JCEBkp1} ${Spath}/backups/${JCEBkp1}-${JCEBkpPostfix}" &> >(tee -a ${statusFile})
+	eval "cp ${JAVA_HOME}/lib/security/${JCEBkp2} ${Spath}/backups/${JCEBkp2}-${JCEBkpPostfix}" &> >(tee -a ${statusFile})
+
+# Fetch new policy file
+	${Echo} "Fetching Java Cryptography Extensions from Oracle" | tee -a ${statusFile}
+
+        jcePolicySrc="jce_policy-8.zip"
+
+        if [ ! -s "${downloadPath}/${jcePolicySrc}" ]; then
+                ${fetchCmd} ${downloadPath}/${jcePolicySrc} -j -L -H "Cookie: oraclelicense=accept-securebackup-cookie"  http://download.oracle.com/otn-pub/java/jce/8/${jcePolicySrc} >> ${statusFile} 2>&1
+        fi
+       
+# Extract locally into downloads directory
+
+       eval "(pushd ${downloadPath}; unzip -o ${downloadPath}/${jcePolicySrc}; popd)" &> >(tee -a ${statusFile})
+
+# copy into place
+	${Echo} "Putting Java Cryptography Extensions from Oracle into ${JAVA_HOME}/lib/security/" | tee -a ${statusFile}
+
+	JCEWorkingDir="${downloadPath}/UnlimitedJCEPolicyJDK8"
+	eval "cp ${JCEWorkingDir}/${JCEBkp1} ${JAVA_HOME}/lib/security/${JCEBkp1}" &> >(tee -a ${statusFile})
+	eval "cp ${JCEWorkingDir}/${JCEBkp2} ${JAVA_HOME}/lib/security/${JCEBkp2}" &> >(tee -a ${statusFile})
+
+	${Echo} "Testing Java Cryptography Extensions" | tee -a ${statusFile}
+	JCEUnlimitedResponse="2147483647"
+	JCETestCmd="java -classpath ${downloadPath} checkJCEStrength"
+	JCETestResults=$(eval ${JCETestCmd}) 
+
+	if [ "${JCETestResults}" ==  "${JCEUnlimitedResponse}" ]
+	     then
+            ${Echo} "Java Cryptography Extensions update succeeded" | tee -a ${statusFile}
+	else
+			${Echo} "**Java Cryptography Extensions update failed! rolling back using backups**" | tee -a ${statusFile}
+			${Echo} "**Install will succeed but you will not operate at full crypto strength **" | tee -a ${statusFile}
+			${Echo} "**Some Service Providers will fail to negotiate. See https://github.com/canariecaf/idp-installer-CAF/issues/71 **" | tee -a ${statusFile}
+
+	eval "cp  ${Spath}/backups/${JCEBkp1}-${JCEBkpPostfix} ${JAVA_HOME}/lib/security/${JCEBkp1}" &> >(tee -a ${statusFile})
+	eval "cp ${Spath}/backups/${JCEBkp2}-${JCEBkpPostfix} ${JAVA_HOME}/lib/security/${JCEBkp2}" &> >(tee -a ${statusFile})
+
+
+	fi
+
+
+
+}
+
+
+
 
 generatePasswordsForSubsystems ()
 
@@ -354,6 +448,8 @@ setHostnames() {
 	Dname=`${Echo} ${FQDN} | cut -d\. -f2-`
 	if [ "${FQDN}" = "Host" ]
 	then
+		eval ${dist_install_netstat} >> ${statusFile} 2>&1
+
 		myInterface=`netstat -nr | grep "^0.0.0.0" | awk '{print $NF}'`
 		myIP=`ip addr list ${myInterface} | grep "inet " | cut -d' ' -f6 | cut -d/ -f1`
 		Dname=`host -t A ${myIP} | head -1 | awk '{print $NF}' | cut -d\. -f2- | sed 's/\.$//'`
@@ -385,111 +481,90 @@ fetchMysqlCon() {
 }
 
 
-
-installFticksIfEnabled() {
-
-if [ "${fticks}" != "n" ]; then
-
-	${Echo} "Installing ndn-shib-fticks"
-	${Echo} "Live logging can be seen by this command in another window: tail -f ${statusFile}"
-		eval ${distCmd2} &> >(tee -a ${statusFile})
-		Cres=$?
-
-		if [ $Cres -gt 0 ]; then
-			${Echo} "Command failed: ${distCmd2}"
-			cleanBadInstall
-		fi
-		if [ ! -s "`which mvn 2>/dev/null`" ]; then
-			installMavenRC
-		fi
-
-		if [ ! -s "`which mvn 2>/dev/null`" ]; then
-			${Echo} "Maven2 not found! Install Maven2 and re-run this script."
-			cleanBadInstall
-		fi
-
-	cd /opt
-	git clone git://github.com/leifj/ndn-shib-fticks.git >> ${statusFile} 2>&1
-	cd ndn-shib-fticks
-	mvn >> ${statusFile} 2>&1
-	cp /opt/ndn-shib-fticks/target/*.jar /opt/shibboleth-identityprovider/lib
-
-else
-	${Echo} "NOT Installing ndn-shib-fticks"
-
-fi
-
-
-}
-
 installEPTIDSupport ()
-	{
-	if [ "${eptid}" != "n" ]; then
-		${Echo} "Installing EPTID support"
-		if [ "${dist}" == "ubuntu" ]; then
-			test=`dpkg -s mysql-server > /dev/null 2>&1`
-			isInstalled=$?
-		else
-			[ -f /etc/init.d/mysqld ]
-			isInstalled=$?
-		fi
+        {
+        if [ "${eptid}" != "n" ]; then
+                ${Echo} "Installing EPTID support"
 
-		if [ "${isInstalled}" -ne 0 ]; then
-			export DEBIAN_FRONTEND=noninteractive
-			${Echo} "Installing mysql server packages..."
-			#${Echo} "Live logging can be seen by this command in another window: tail -f ${statusFile}"
-			eval ${distCmd5} &> >(tee -a ${statusFile})
-			${Echo} "Done."
+                if [ "$dist" == "ubuntu" ]; then
+                        test=`dpkg -s mysql-server > /dev/null 2>&1`
+                        isInstalled=$?
 
-			mysqldTest=`pgrep mysqld`
-			if [ -z "${mysqldTest}" ]; then
-				if [ "${dist}" == "ubuntu" ]; then
-					service mysql start >> ${statusFile} 2>&1
-				else
-					/etc/init.d/mysqld start >> ${statusFile} 2>&1
-				fi
-			fi
-			# set mysql root password
-			tfile=`mktemp`
-			if [ ! -f "$tfile" ]; then
-				return 1
-			fi
-			cat << EOM > $tfile
+                elif [ "$dist" == "centos" -a "$redhatDist" == "6" ]; then
+                        [ -f /etc/init.d/mysqld ]
+                        isInstalled=$?
+
+                elif [ "$dist" == "centos" -a "$redhatDist" == "7" ]; then
+                        #Add Oracle repos
+                        if [ ! -z "`rpm -q mysql-community-release | grep ' is not installed'`" ]; then
+
+                                ${Echo} "Detected no MySQL, adding repos into /etc/yum.repos.d/ and updating them"
+                                mysqlOracleRepo="rpm -Uvh http://repo.mysql.com/mysql-community-release-el7.rpm"
+                                eval $mysqlOracleRepo >> ${statusFile} 2>&1
+
+                        else
+
+                                ${Echo} "Dected MySQL Repo EXIST on this system."
+                        fi
+                        test=`rpm -q mysql-community-server > /dev/null 2>&1`
+                        isInstalled=$?
+
+                fi
+
+                if [ "${isInstalled}" -ne 0 ]; then
+                        export DEBIAN_FRONTEND=noninteractive
+                        eval ${distCmd5} >> ${statusFile} 2>&1
+
+                        mysqldTest=`pgrep mysqld`
+                        if [ -z "${mysqldTest}" ]; then
+                                if [ ${dist} == "ubuntu" ]; then
+                                        service mysql restart >> ${statusFile} 2>&1
+                                else
+                                        service mysqld restart >> ${statusFile} 2>&1
+                                fi
+                        fi
+                        # set mysql root password
+                        tfile=`mktemp`
+                        if [ ! -f "$tfile" ]; then
+                                return 1
+                        fi
+                        cat << EOM > $tfile
 USE mysql;
 UPDATE user SET password=PASSWORD("${mysqlPass}") WHERE user='root';
 FLUSH PRIVILEGES;
 EOM
 
-			mysql --no-defaults -u root -h localhost <$tfile
-			retval=$?
-			# moved removal of MySQL command file to be in the if-then-else statement set below
+                        mysql --no-defaults -u root -h localhost <$tfile
+                        retval=$?
+                        # moved removal of MySQL command file to be in the if-then-else statement set below
 
-			if [ "${retval}" -ne 0 ]; then
-				${Echo} "\n\n\nAn error has occurred in the configuration of the MySQL installation."
-				${Echo} "Please correct the MySQL installation and make sure a root password is set and it is possible to log in using the 'mysql' command."
-				${Echo} "When MySQL is working, re-run this script."
-				${Echo} "The file being run in MySQL is ${tfile} and has not been deleted, please review and delete as necessary."
-				cleanBadInstall
-			else
-				rm -f $tfile
-			fi
-
-
-			if [ "${dist}" != "ubuntu" ]; then
-				/sbin/chkconfig mysqld on
-			fi
-		fi
-
-		fetchMysqlCon
-		cd /opt
-		tar zxf ${downloadPath}/mysql-connector-java-${mysqlConVer}.tar.gz -C /opt >> ${statusFile} 2>&1
-		cp /opt/mysql-connector-java-${mysqlConVer}/mysql-connector-java-${mysqlConVer}-bin.jar /opt/shibboleth-identityprovider/lib/
-
-	fi
+                        if [ "${retval}" -ne 0 ]; then
+                                ${Echo} "\n\n\nAn error has occurred in the configuration of the MySQL installation."
+                                ${Echo} "Please correct the MySQL installation and make sure a root password is set and it is possible to log in using the 'mysql' command."
+                                ${Echo} "When MySQL is working, re-run this script."
+                                ${Echo} "The file being run in MySQL is ${tfile} and has not been deleted, please review and delete as necessary."
+                                cleanBadInstall
+                        else
+                                rm -f $tfile
+                        fi
 
 
+                        if [ "${dist}" != "ubuntu" ]; then
+                                /sbin/chkconfig mysqld on
+                        fi
+                fi
 
-	}
+                fetchMysqlCon
+                cd /opt
+                tar zxf ${downloadPath}/mysql-connector-java-${mysqlConVer}.tar.gz -C /opt >> ${statusFile} 2>&1
+                cp /opt/mysql-connector-java-${mysqlConVer}/mysql-connector-java-${mysqlConVer}-bin.jar /opt/shibboleth-idp/edit-webapp/WEB-INF/lib/
+		/opt/shibboleth-idp/bin/build.sh -Didp.target.dir=/opt/shibboleth-idp
+
+        fi
+
+
+
+        }
 
 installCasClientIfEnabled() {
 
@@ -498,7 +573,7 @@ if [ "${type}" = "cas" ]; then
 	if [ ! -f "${downloadPath}/cas-client-${casVer}-release.zip" ]; then
 		fetchCas
 	fi
-	unzip -q ${downloadPath}/cas-client-${casVer}-release.zip -d /opt
+	unzip -qo ${downloadPath}/cas-client-${casVer}-release.zip -d /opt
 	if [ ! -s "/opt/cas-client-${casVer}/modules/cas-client-core-${casVer}.jar" ]; then
 		${Echo} "Unzip of cas-client failed, check zip file: ${downloadPath}/cas-client-${casVer}-release.zip"
 		cleanBadInstall
@@ -516,16 +591,17 @@ if [ "${type}" = "cas" ]; then
 		caslogurl=$(askString "CAS login URL" "Please input the Login URL to your CAS server (https://cas.xxx.yy/cas/login)" "${casurl}/login")
 	fi
 
-	cp /opt/cas-client-${casVer}/modules/cas-client-core-${casVer}.jar /opt/shibboleth-identityprovider/lib/
-	mkdir /opt/shibboleth-identityprovider/src/main/webapp/WEB-INF/lib
-	cp /opt/cas-client-${casVer}/modules/cas-client-core-${casVer}.jar /opt/shibboleth-identityprovider/src/main/webapp/WEB-INF/lib
+	cp /opt/cas-client-${casVer}/modules/cas-client-core-${casVer}.jar /opt/shibboleth-idp/edit-webapp/WEB-INF/lib/
+	cp /opt/shibboleth-idp/webapp/WEB-INF/web.xml /opt/shibboleth-idp/edit-webapp/WEB-INF/
 	
-	cat ${Spath}/${prep}/shibboleth-identityprovider-web.xml.diff.template \
+	cat ${Spath}/${prep}/${shibDir}-web.xml.diff.template \
 		| sed -re "s#IdPuRl#${idpurl}#;s#CaSuRl#${caslogurl}#;s#CaS2uRl#${casurl}#" \
-		> ${Spath}/${prep}/shibboleth-identityprovider-web.xml.diff
-	files="`${Echo} ${files}` ${Spath}/${prep}/shibboleth-identityprovider-web.xml.diff"
+		> ${Spath}/${prep}/${shibDir}-web.xml.diff
+	files="`${Echo} ${files}` ${Spath}/${prep}/${shibDir}-web.xml.diff"
 
-	patch /opt/shibboleth-identityprovider/src/main/webapp/WEB-INF/web.xml -i ${Spath}/${prep}/shibboleth-identityprovider-web.xml.diff >> ${statusFile} 2>&1
+	patch /opt/shibboleth-idp/edit-webapp/WEB-INF/web.xml -i ${Spath}/${prep}/${shibDir}-web.xml.diff >> ${statusFile} 2>&1
+
+	/opt/shibboleth-idp/bin/build.sh -Didp.target.dir=/opt/shibboleth-idp
 
 else
 	${Echo} "Authentication type: ${type}, CAS Client Not Requested"
@@ -537,36 +613,16 @@ fi
 
 }
 
-installTomcat() {
-	isInstalled="4"
-	if [ "${dist}" = "ubuntu" ]; then
-		test=`dpkg -s tomcat6 > /dev/null 2>&1`
-		isInstalled=$?
-	else
-		test=`rpm -q tomcat6 > /dev/null 2>&1`
-		isInstalled=$?
-	fi
-	if [ "${isInstalled}" -ne 0 ]; then
-		${Echo} "Installing Tomcat6 packages..."
-		#${Echo} "Live logging can be seen by this command in another window: tail -f ${statusFile}"
-		eval ${distCmd4} &> >(tee -a ${statusFile})
-		${Echo} "Done."
-		if [ "${dist}" != "ubuntu" ]; then
-			/sbin/chkconfig tomcat6 on
-		fi
-	fi
-}
-
 fetchAndUnzipShibbolethIdP ()
 
 {
 	cd /opt
 
-	if [ ! -f "${downloadPath}/shibboleth-identityprovider-${shibVer}-bin.zip" ]; then
+	if [ ! -f "${downloadPath}/${shibDir}-${shibVer}.tar.gz" ]; then
 		${Echo} "Shibboleth not found, fetching from web"
-		${fetchCmd} ${downloadPath}/shibboleth-identityprovider-${shibVer}-bin.zip ${shibbURL}
+		${fetchCmd} ${downloadPath}/${shibDir}-${shibVer}.tar.gz ${shibbURL}
 
-		if [ ! -s ${downloadPath}/shibboleth-identityprovider-${shibVer}-bin.zip ]; then
+		if [ ! -s ${downloadPath}/${shibDir}-${shibVer}.tar.gz ]; then
 		${Echo} "Error while downloading Shibboleth, aborting."
 		cleanBadInstall
 		fi
@@ -575,9 +631,9 @@ fetchAndUnzipShibbolethIdP ()
 # 	unzip all files
 	${Echo} "Unzipping dependancies"
 
-	unzip -q ${downloadPath}/shibboleth-identityprovider-${shibVer}-bin.zip -d /opt
-	chmod -R 755 /opt/shibboleth-identityprovider-${shibVer}
-	ln -s shibboleth-identityprovider-${shibVer} shibboleth-identityprovider
+	tar xzf ${downloadPath}/${shibDir}-${shibVer}.tar.gz -C /opt
+	chmod -R 755 /opt/${shibDir}-${shibVer}
+	ln -s ${shibDir}-${shibVer} ${shibDir}
 }
 
 
@@ -591,8 +647,6 @@ mkdir -p ${certpath}
 
 }
 
-
-
 installCertificates()
 
 {
@@ -600,35 +654,42 @@ installCertificates()
 # change to certificate path whilst doing this part
 cd ${certpath}
 ${Echo} "Fetching TCS CA chain from web"
-	${fetchCmd} ${certpath}/server.chain ${certificateChain}
-	if [ ! -s "${certpath}/server.chain" ]; then
-		${Echo} "Can not get the certificate chain, aborting install."
-		cleanBadInstall
-	fi
+        ${fetchCmd} ${certpath}/server.chain ${certificateChain}
+        if [ ! -s "${certpath}/server.chain" ]; then
+                ${Echo} "Can not get the certificate chain, aborting install."
+                cleanBadInstall
+        fi
 
-	${Echo} "Installing TCS CA chain in java cacert keystore"
-	cnt=1
-	for i in `cat ${certpath}server.chain | sed -re 's/\ /\*\*\*/g'`; do
-		n=`${Echo} ${i} | sed -re 's/\*\*\*/\ /g'`
-		${Echo} ${n} >> ${certpath}${cnt}.root
-		ltest=`${Echo} ${n} | grep "END CERTIFICATE"`
-		if [ ! -z "${ltest}" ]; then
-			cnt=`expr ${cnt} + 1`
-		fi
+        ${Echo} "Installing TCS CA chain in java cacert keystore"
+        cnt=1
+        for i in `cat ${certpath}server.chain | sed -re 's/\ /\*\*\*/g'`; do
+                n=`${Echo} ${i} | sed -re 's/\*\*\*/\ /g'`
+                ${Echo} ${n} >> ${certpath}${cnt}.root
+                ltest=`${Echo} ${n} | grep "END CERTIFICATE"`
+                if [ ! -z "${ltest}" ]; then
+                        cnt=`expr ${cnt} + 1`
+                fi
+        done
+        ccnt=1
+        while [ ${ccnt} -lt ${cnt} ]; do
+                md5finger=`${keytool} -printcert -file ${certpath}${ccnt}.root | grep MD5 | cut -d: -f2- | sed -re 's/\s+//g'`
+                test=`${keytool} -list -keystore ${javaCAcerts} -storepass changeit | grep ${md5finger}`
+                subject=`openssl x509 -subject -noout -in ${certpath}${ccnt}.root | awk -F= '{print $NF}'`
+                if [ -z "${test}" ]; then
+                        ${keytool} -import -noprompt -trustcacerts -alias "${subject}" -file ${certpath}${ccnt}.root -keystore ${javaCAcerts} -storepass changeit >> ${statusFile} 2>&1
+                fi
+                files="`${Echo} ${files}` ${certpath}${ccnt}.root"
+                ccnt=`expr ${ccnt} + 1`
+        done
+
+	# Fetch ldap cert
+	for loopServer in ${ldapserver}; do
+		${Echo} "QUIT" | openssl s_client -connect ${loopServer}:636 2>/dev/null | sed -ne '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' >> ${certpath}/ldap-server.crt
 	done
-	ccnt=1
-	while [ ${ccnt} -lt ${cnt} ]; do
-		md5finger=`keytool -printcert -file ${certpath}${ccnt}.root | grep MD5 | cut -d: -f2- | sed -re 's/\s+//g'`
-		test=`keytool -list -keystore ${javaCAcerts} -storepass changeit | grep ${md5finger}`
-		subject=`openssl x509 -subject -noout -in ${certpath}${ccnt}.root | awk -F= '{print $NF}'`
-		if [ -z "${test}" ]; then
-			keytool -import -noprompt -trustcacerts -alias "${subject}" -file ${certpath}${ccnt}.root -keystore ${javaCAcerts} -storepass changeit >> ${statusFile} 2>&1
-		fi
-		files="`${Echo} ${files}` ${certpath}${ccnt}.root"
-		ccnt=`expr ${ccnt} + 1`
-	done
-	
+
 }
+
+
 
 askForConfigurationData() {
 	if [ -z "${type}" ]; then
@@ -737,7 +798,7 @@ askForConfigurationData() {
 		eptid=$(askYesNo "eduPersonTargetedID" "Do you want to install support for eduPersonTargetedID?\nThis is recommended")
 	fi
 
-	if [ "${eptid}" != "n" ]; then
+	if [ "${eptid}" != "n" -a "${passw_input}" = "y" ]; then
 		mysqlPass=$(askString "MySQL password" "MySQL is used for supporting the eduPersonTargetedId attribute.\n\n Please set the root password for MySQL.\nAn empty string generates a randomized new password" "" 1)
 	fi
 
@@ -745,63 +806,18 @@ askForConfigurationData() {
 		selfsigned=$(askYesNo "Self signed certificate" "Create a self signed certificate for HTTPS?\n\nThis is NOT recommended for production systems! Only for testing purposes" "y")
 	fi
 
-	pass=$(askString "IDP keystore password" "The IDP keystore is for the Shibboleth software itself and not the webserver. Please set your IDP keystore password.\nAn empty string generates a randomized new password" "" 1)
-	httpspass=$(askString "HTTPS Keystore password" "The webserver uses a separate keystore for itself. Please input your Keystore password for the end user facing HTTPS.\n\nAn empty string generates a randomized new password" "" 1)
-}
-
-setDistCommands() {
-	if [ ${dist} = "ubuntu" ]; then
-		distCmdU=${ubuntuCmdU}
-		distCmd1=${ubuntuCmd1}
-		distCmd2=${ubuntuCmd2}
-		distCmd3=${ubuntuCmd3}
-		distCmd4=${ubuntuCmd4}
-		distCmd5=${ubuntuCmd5}
-		tomcatSettingsFile=${tomcatSettingsFileU}
-	elif [ ${dist} = "centos" -o "${dist}" = "redhat" ]; then
-		if [ ${dist} = "centos" ]; then
-			redhatDist=`cat /etc/centos-release |cut -f3 -d' ' |cut -c1`
-			distCmdU=${centosCmdU}
-			distCmd1=${centosCmd1}
-			distCmd2=${centosCmd2}
-			distCmd3=${centosCmd3}
-			distCmd4=${centosCmd4}
-			distCmd5=${centosCmd5}
-		else
-			redhatDist=`cat /etc/redhat-release | cut -d' ' -f7 | cut -c1`
-			distCmdU=${redhatCmdU}
-			distCmd1=${redhatCmd1}
-			distCmd2=${redhatCmd2}
-			distCmd3=${redhatCmd3}
-			distCmd4=${redhatCmd4}
-			distCmd5=${redhatCmd5}
-		fi
-		tomcatSettingsFile=${tomcatSettingsFileC}
-
-		if [ "$redhatDist" -eq "6" ]; then
-			redhatEpel=${redhatEpel6}
-		else
-			redhatEpel=${redhatEpel5}
-		fi
-
-		#if [ ! -z "`rpm -q epel-release | grep ' is not installed'`" ]; then
-		#	
-		#	# Consider this base requirement for system, or maybe move it to the installation phase for Shibboleth??
-		#	#
-		##	continueF="y"
-#
-#
-#			if [ "${continueF}" = "y" ]; then
-#				installEPEL
-#			fi
-#		fi
-
-		if [ "`which host 2>/dev/null`" == "" ]; then
-			${Echo} "Installing bind-utils..."
-			yum -y -q install bind-utils >> ${statusFile} 2>&1
-		fi
+	if [ "${passw_input}" = "y" ]; then
+		pass=$(askString "IDP keystore password" "The IDP keystore is for the Shibboleth software itself and not the webserver. Please set your IDP keystore password.\nAn empty string generates a randomized new password" "" 1)
+		httpspass=$(askString "HTTPS Keystore password" "The webserver uses a separate keystore for itself. Please input your Keystore password for the end user facing HTTPS.\n\nAn empty string generates a randomized new password" "" 1)
 	fi
+
+	if [ -z "${consentEnabled}" ]; then
+		subsearch=$(askYesNo "User consent" "Do you want to enable user consent?")
+	fi
+
+
 }
+
 
 prepConfirmBox() {
 	cat > ${downloadPath}/confirm.tx << EOM
@@ -911,37 +927,130 @@ configShibbolethXMLAttributeResolverForLDAP ()
 		ldapServerStr="`${Echo} ${ldapServerStr}` ldaps://${i}"
 	done
 	ldapServerStr=`${Echo} ${ldapServerStr} | sed -re 's/^\s+//'`
-	if [ -z "${my_eduroamDomain}" ]; then
-		my_eduroamDomain=`${Echo} ${certCN} | cut -d. -f2-`
-	fi
+	orgTopDomain=`${Echo} ${certCN} | cut -d. -f2-`
+
+	${Echo} "Processing Attribute-resolver.xml customizations"
+
 	cat ${Spath}/xml/${my_ctl_federation}/attribute-resolver.xml.template \
-		| sed -re "s#LdApUrI#${ldapServerStr}#;s/LdApBaSeDn/${ldapbasedn}/;s/LdApCrEdS/${ldapbinddn}/;s/LdApPaSsWoRd/${ldappass}/" \
 		| sed -re "s/NiNcRePlAcE/${ninc}/;s/CeRtAcRoNyM/${certAcro}/;s/CeRtOrG/${certOrg}/;s/CeRtC/${certC}/;s/CeRtLoNgC/${certLongC}/" \
-		| sed -re "s/SCHAC_HOME_ORG/${my_eduroamDomain}/" \
+		| sed -re "s/SCHAC_HOME_ORG/${orgTopDomain}/;s/LdApUsErAtTr/${attr_filter}/g" \
 		> ${Spath}/xml/${my_ctl_federation}/attribute-resolver.xml
 	files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/attribute-resolver.xml"
 
-}
+        cat ${Spath}/xml/${my_ctl_federation}/ldapconn.template \
+                | sed -re "s/AtTrFiLtEr/${attr_filter}/" \
+                > ${Spath}/xml/${my_ctl_federation}/ldapconn.txt
+        files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/ldapconn.txt"
 
-configTomcatServerXMLForPasswd ()
-{
 
-	# 	prepare config from templates
-	cat ${Spath}/xml/${my_ctl_federation}/server.xml.tomcat \
-		| sed -re "s#ShIbBKeyPaSs#${pass}#;s#HtTpSkEyPaSs#${httpspass}#;s#HtTpSJkS#${httpsP12}#;s#TrUsTsToRe#${javaCAcerts}#" \
-		> ${Spath}/xml/${my_ctl_federation}/server.xml
-	files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/server.xml"
 }
 
 runShibbolethInstaller ()
 
 {
-	# 	run shibboleth installer
-	cd /opt/shibboleth-identityprovider
-	${Echo} "Running shiboleth installer"
-	sh install.sh -Didp.home.input="/opt/shibboleth-idp" -Didp.hostname.input="${certCN}" -Didp.keystore.pass="${pass}" >> ${statusFile} 2>&1
+        #       run shibboleth installer
+        cd /opt/${shibDir}
+        ${Echo} "Running shiboleth installer"
+
+
+	# Set some default values
+
+        if [ -x ${ldap_type} ]; then
+                ldap_type="ad"
+        fi
+
+	if [ -x ${ldapStartTLS} ]; then
+		ldapStartTLS="true"
+	fi
+
+        if [ -x ${ldapSSL} ]; then
+                ldapSSL="false"
+	fi
+
+        if [ -x ${user_field} ]; then
+                user_field="samaccountname"
+        fi
+
+        if [ -x ${attr_filter} ]; then
+                attr_filter="uid"
+        fi
+
+        if [ -x ${ldap_attr} ]; then
+                ldap_attr=""
+        fi
+
+	# ActiveDirectory specific
+	if [ "${ldap_type}" = "ad" ]; then
+
+              #Set idp.authn.LDAP.authenticator
+              ldapAuthenticator="adAuthenticator"
+	      # Extract AD domain from baseDN
+	      #ldapbasedn_tmp=$(echo ${ldapbasedn}  | tr '[:upper:]' '[:lower:]')
+	      #ldapDomain=$(echo ${ldapbasedn_tmp#ou*dc=} | sed "s/,dc=/./g")
+	      #ldapDnFormat="%s@${ldapDomain}"
+	      ldapDnFormat="%s@${ldapdn}"	
+
+	 # Other LDAP implementations
+	 else
+	       #Set idp.authn.LDAP.authenticator
+               ldapAuthenticator="bindSearchAuthenticator"
+	       ldapDnFormat="uid=%s,${ldapbasedn}"
+	 fi
+
+
+	if [ "${type}" = "ldap" ]; then
+
+	       cat << EOM > idp.properties.tmp
+idp.scope 			    =${idpScope} 
+idp.entityID            = https://${certCN}/idp/shibboleth
+idp.sealer.storePassword= ${pass}
+idp.sealer.keyPassword  = ${pass}
+idp.authn.flows		= Password
+EOM
+
+	elif [ "${type}" = "cas" ]; then
+
+                cat << EOM > idp.properties.tmp
+idp.scope 			    =${idpScope} 
+idp.entityID            = https://${certCN}/idp/shibboleth
+idp.sealer.storePassword= ${pass}
+idp.sealer.keyPassword  = ${pass}
+idp.authn.flows         = RemoteUser
+EOM
+
+	fi
+
+	# Set LDAP configuration (needed for both cas and ldap)
+        cat << EOM > ldap.properties.tmp
+idp.authn.LDAP.authenticator                    = ${ldapAuthenticator}
+idp.authn.LDAP.ldapURL                          = ${ldapurl}
+idp.authn.LDAP.useStartTLS                      = ${ldapStartTLS}
+idp.authn.LDAP.useSSL                           = ${ldapSSL}
+idp.authn.LDAP.sslConfig                        = certificateTrust
+idp.authn.LDAP.trustCertificates                = %{idp.home}/ssl/ldap-server.crt
+idp.authn.LDAP.trustStore                       = %{idp.home}/credentials/ldap-server.truststore
+idp.authn.LDAP.returnAttributes                 = ${ldap_attr}
+idp.authn.LDAP.baseDN                           = ${ldapbasedn}
+idp.authn.LDAP.subtreeSearch                    = true
+idp.authn.LDAP.userFilter                       = (${attr_filter}={user})
+idp.authn.LDAP.bindDN                           = ${ldapbinddn}
+idp.authn.LDAP.bindDNCredential                 = ${ldappass}
+idp.authn.LDAP.dnFormat                         = ${ldapDnFormat}
+EOM
+
+	# Run the installer
+	JAVA_HOME=/usr/java/default sh bin/install.sh \
+	-Didp.src.dir=./ \
+	-Didp.target.dir=/opt/shibboleth-idp \
+	-Didp.host.name="${certCN}" \
+	-Didp.scope="${idpScope}" \
+	-Didp.keystore.password="${pass}" \
+	-Didp.sealer.password="${pass}" \
+	-Dldap.merge.properties=./ldap.properties.tmp \
+	-Didp.merge.properties=./idp.properties.tmp
 
 }
+
 
 configShibbolethSSLForLDAPJavaKeystore()
 
@@ -980,11 +1089,11 @@ configShibbolethSSLForLDAPJavaKeystore()
 	for i in `ls ${certpath}${ldapCert}.*`; do
 
 		numLDAPCertificateFiles=$[$numLDAPCertificateFiles +1]
-		md5finger=`keytool -printcert -file ${i} | grep MD5 | cut -d: -f2- | sed -re 's/\s+//g'`
-		test=`keytool -list -keystore ${javaCAcerts} -storepass changeit | grep ${md5finger}`
+		md5finger=`${keytool} -printcert -file ${i} | grep MD5 | cut -d: -f2- | sed -re 's/\s+//g'`
+		test=`${keytool} -list -keystore ${javaCAcerts} -storepass changeit | grep ${md5finger}`
 		subject=`openssl x509 -subject -noout -in ${i} | awk -F= '{print $NF}'`
 		if [ -z "${test}" ]; then
-			keytool -import -noprompt -alias "${subject}" -file ${i} -keystore ${javaCAcerts} -storepass changeit >> ${statusFile} 2>&1
+			${keytool} -import -noprompt -alias "${subject}" -file ${i} -keystore ${javaCAcerts} -storepass changeit >> ${statusFile} 2>&1
 		fi
 		files="`${Echo} ${files}` ${i}"
 	done
@@ -1010,27 +1119,36 @@ configShibbolethSSLForLDAPJavaKeystore()
 
 }
 
-configTomcatSSLServerKey()
+patchConfigCustomizations()
+
+{
+	cp ${Spath}/images/logo.png /opt/shibboleth-idp/edit-webapp/images/
+	sed -ri 's/dummylogo.png/logo.png/' /opt/shibboleth-idp/messages/error-messages.properties
+	sed -ri 's/dummylogo.png/logo.png/' /opt/shibboleth-idp/webapp/index.jsp
+}
+
+configContainerSSLServerKey()
 
 {
 
-	#set up ssl store
-	if [ ! -s "${certpath}server.key" ]; then
-		${Echo} "Generating SSL key and certificate request"
-		openssl genrsa -out ${certpath}server.key 2048 2>/dev/null
-		openssl req -new -key ${certpath}server.key -out ${certREQ} -config ${downloadPath}/openssl.cnf -subj "/CN=${certCN}/O=${certOrg}/C=${certC}"
-	fi
-	if [ "${selfsigned}" = "n" ]; then
-		${Echo} "Put the certificate from TCS in the file: ${certpath}server.crt" >> ${messages}
-		${Echo} "Run: openssl pkcs12 -export -in ${certpath}server.crt -inkey ${certpath}server.key -out ${httpsP12} -name tomcat -passout pass:${httpspass}" >> ${messages}
-	else
-		openssl x509 -req -days 365 -in ${certREQ} -signkey ${certpath}server.key -out ${certpath}server.crt
-		if [ ! -d "/opt/shibboleth-idp/credentials/" ]; then
-			mkdir /opt/shibboleth-idp/credentials/
-		fi
-		openssl pkcs12 -export -in ${certpath}server.crt -inkey ${certpath}server.key -out ${httpsP12} -name tomcat -passout pass:${httpspass}
-	fi
+        #set up ssl store
+        if [ ! -s "${certpath}server.key" ]; then
+                ${Echo} "Generating SSL key and certificate request"
+                openssl genrsa -out ${certpath}server.key 2048 2>/dev/null
+                openssl req -new -key ${certpath}server.key -out ${certREQ} -config ${Spath}/files/openssl.cnf -subj "/CN=${certCN}/O=${certOrg}/C=${certC}"
+        fi
+        if [ "${selfsigned}" = "n" ]; then
+                ${Echo} "Put the certificate from TCS in the file: ${certpath}server.crt" >> ${messages}
+                ${Echo} "Run: openssl pkcs12 -export -in ${certpath}server.crt -inkey ${certpath}server.key -out ${httpsP12} -name container -passout pass:${httpspass}" >> ${messages}
+        else
+                openssl x509 -req -days 365 -in ${certREQ} -signkey ${certpath}server.key -out ${certpath}server.crt
+                if [ ! -d "/opt/shibboleth-idp/credentials/" ]; then
+                        mkdir /opt/shibboleth-idp/credentials/
+                fi
+                openssl pkcs12 -export -in ${certpath}server.crt -inkey ${certpath}server.key -out ${httpsP12} -name container -passout pass:${httpspass}
+        fi
 }
+
 
 patchShibbolethLDAPLoginConfigs ()
 
@@ -1052,69 +1170,6 @@ patchShibbolethLDAPLoginConfigs ()
 
 }
 
-patchTomcatConfigs ()
-
-{
-
-	if [ -d "/usr/share/tomcat6/endorsed" ]; then
-		rm -rf /usr/share/tomcat6/endorsed
-		sed -e '/endorsed/ s/^#*/#/' -i ${tomcatSettingsFile}
-	fi
-
-	echo "JAVA_OPTS=\"-Xms512m -Xmx512m -XX:MaxPermSize=128m\"" >> ${tomcatSettingsFile}
-
-	if [ "${dist}" == "ubuntu" ]; then
-		if [ "${AUTHBIND}" != "yes" ]; then
-			${Echo} "AUTHBIND=yes" >> ${tomcatSettingsFile}
-		else
-			${Echo} "AUTHBIND for tomcat already configured" >> ${messages}
-		fi
-		tomcatSSLport="443"
-	else
-		if [ -z "`grep '7443' /etc/sysconfig/iptables`" ]; then
-			iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-			iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 7443 -j ACCEPT
-			iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT
-			iptables -t nat -A PREROUTING -p tcp --dport 443 -j REDIRECT --to-port 7443
-			iptables-save > /etc/sysconfig/iptables
-		fi
-		service iptables reload
-		tomcatSSLport="7443"
-	fi
-
-	if [ ! -s "/usr/share/tomcat6/lib/tomcat6-dta-ssl-1.0.0.jar" ]; then
-		${fetchCmd} /usr/share/tomcat6/lib/tomcat6-dta-ssl-1.0.0.jar ${tomcatDepend}
-
-		if [ ! -s "/usr/share/tomcat6/lib/tomcat6-dta-ssl-1.0.0.jar" ]; then
-			${Echo} "Can not get tomcat dependancy, aborting install."
-			cleanBadInstall
-		fi
-	fi
-
-	cp /etc/tomcat6/server.xml /etc/tomcat6/server.xml.${ts}
-	cat ${Spath}/xml/${my_ctl_federation}/server.xml | sed "s/tomcatSSLport/${tomcatSSLport}/" > /etc/tomcat6/server.xml
-	chmod o-rwx /etc/tomcat6/server.xml
-
-	tcatUser=`grep "^tomcat" /etc/passwd | cut -d: -f1`
-	chown ${tcatUser} /etc/tomcat6/server.xml
-	chown ${tcatUser} /opt/shibboleth-idp/metadata
-	chown -R ${tcatUser} /opt/shibboleth-idp/logs/
-
-	# need to set bash as the shell for the user to permit tomcat to restart after reboot
-	chsh -s /bin/bash ${tcatUser}
-
-
-	if [ -d "/var/lib/tomcat6/webapps/ROOT" ]; then
-		mv /var/lib/tomcat6/webapps/ROOT /opt/disabled.tomcat6.webapps.ROOT
-	fi
-	if [ "${dist}" = "ubuntu" ]; then
-		cp /usr/share/tomcat6/lib/servlet-api.jar /opt/shibboleth-idp/lib/
-	fi
-
-
-
-}
-
 configShibbolethFederationValidationKey ()
 
 {
@@ -1130,69 +1185,6 @@ configShibbolethFederationValidationKey ()
 	if [ "${cFinger}" != "${mdSignerFinger}" ]; then
 		 ${Echo} "Fingerprint error on md-signer.crt!\nGet ther certificate from http://md.swamid.se/md/md-signer.crt and verify it, then place it in the file: ${idpPath}/credentials/md-signer.crt" >> ${messages}
 	fi
-
-}
-
-patchShibbolethConfigs ()
-{
-
-# patch shibboleth config files
-	${Echo} "Patching config files"
-	mv /opt/shibboleth-idp/conf/attribute-filter.xml /opt/shibboleth-idp/conf/attribute-filter.xml.dist
-	cp ${Spath}/files/${my_ctl_federation}/attribute-filter.xml /opt/shibboleth-idp/conf/attribute-filter.xml
-	patch /opt/shibboleth-idp/conf/handler.xml -i ${Spath}/${prep}/handler.xml.diff >> ${statusFile} 2>&1
-	patch /opt/shibboleth-idp/conf/relying-party.xml -i ${Spath}/xml/${my_ctl_federation}/relying-party.xml.diff >> ${statusFile} 2>&1
-# 	patch /opt/shibboleth-idp/conf/attribute-resolver.xml -i ${Spath}/xml/${my_ctl_federation}/attribute-resolver.xml.diff >> ${statusFile} 2>&1
-	cp ${Spath}/xml/${my_ctl_federation}/attribute-resolver.xml /opt/shibboleth-idp/conf/attribute-resolver.xml
-
-	if [ "${google}" != "n" ]; then
-		repStr='<!-- PLACEHOLDER DO NOT REMOVE -->'
-		sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/google-filter.add" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-filter.xml
-		cat ${Spath}/xml/${my_ctl_federation}/google-relay.diff.template | sed -re "s/IdPfQdN/${certCN}/" > ${Spath}/xml/${my_ctl_federation}/google-relay.diff
-		files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/google-relay.diff"
-		patch /opt/shibboleth-idp/conf/relying-party.xml -i ${Spath}/xml/${my_ctl_federation}/google-relay.diff >> ${statusFile} 2>&1
-		cat ${Spath}/xml/${my_ctl_federation}/google.xml | sed -re "s/GoOgLeDoMaIn/${googleDom}/" > /opt/shibboleth-idp/metadata/google.xml
-	fi
-
-	if [ "${fticks}" != "n" ]; then
-		cp ${Spath}/xml/${my_ctl_federation}/fticks_logging.xml /opt/shibboleth-idp/conf/logging.xml
-		touch /opt/shibboleth-idp/conf/fticks-key.txt
-		chown ${tcatUser} /opt/shibboleth-idp/conf/fticks-key.txt
-	fi
-
-	if [ "${eptid}" != "n" ]; then
-		epass=`${passGenCmd}`
-# 		grant sql access for shibboleth
-		esalt=`openssl rand -base64 36 2>/dev/null`
-		cat ${Spath}/xml/${my_ctl_federation}/eptid.sql.template | sed -re "s#SqLpAsSwOrD#${epass}#" > ${Spath}/xml/${my_ctl_federation}/eptid.sql
-		files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.sql"
-
-		${Echo} "Create MySQL database and shibboleth user."
-		mysql -uroot -p"${mysqlPass}" < ${Spath}/xml/${my_ctl_federation}/eptid.sql
-		retval=$?
-		if [ "${retval}" -ne 0 ]; then
-			${Echo} "Failed to create EPTID database, take a look in the file '${Spath}/xml/${my_ctl_federation}/eptid.sql.template' and corect the issue." >> ${messages}
-			${Echo} "Password for the database user can be found in: /opt/shibboleth-idp/conf/attribute-resolver.xml" >> ${messages}
-		fi
-			
-		cat ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon.template \
-			| sed -re "s#SqLpAsSwOrD#${epass}#;s#Large_Random_Salt_Value#${esalt}#" \
-			> ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon
-		files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon"
-
-		repStr='<!-- EPTID RESOLVER PLACEHOLDER -->'
-		sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.resolver" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
-
-		repStr='<!-- EPTID ATTRIBUTE CONNECTOR PLACEHOLDER -->'
-		sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
-
-		repStr='<!-- EPTID PRINCIPAL CONNECTOR PLACEHOLDER -->'
-		sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.princCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
-
-		repStr='<!-- EPTID FILTER PLACEHOLDER -->'
-		sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.filter" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-filter.xml
-	fi
-
 
 }
 
@@ -1213,23 +1205,41 @@ updateMachineTime ()
 	fi
 }
 
-updateTomcatAddingIDPWar ()
+updateMachineHealthCrontab ()
 {
-	# 	add idp.war to tomcat
-	if [ "${dist}" = "ubuntu" ]; then
-		cp ${Spath}/xml/${my_ctl_federation}/tomcat.idp.xml /var/lib/tomcat6/conf/Catalina/localhost/idp.xml
-	else
-		cp ${Spath}/xml/${my_ctl_federation}/tomcat.idp.xml /etc/tomcat6/Catalina/localhost/idp.xml
-		# make sure tomcat can see the file
-		chown ${tcatUser} /etc/tomcat6/Catalina/localhost/idp.xml
 
+
+${Echo} "Installing and adding daily crontab health checks"
+
+	# make sure directory is in place
+	${Echo} "Creating IdP Installer installation in ${idpInstallerBase}"
+	idpInstallerBin="${idpInstallerBase}/bin"
+	dailyTasks="${idpInstallerBin}/dailytasks.sh"
+	mkdir -p ${idpInstallerBin}
+
+	${Echo} "adding dailytasks.sh to ${idpInstallerBin}"
+	# note that this file is not federation specific, but generic 
+	# 
+	cp ${Spath}/files/dailytasks.sh.template ${dailyTasks}
+	chmod ugo+rx ${dailyTasks}
+
+
+	${Echo} "Preparing Crontab installation"
+	
+	test=`crontab -l 2>/dev/null | grep dailytasks`
+	if [ -z "${test}" ]; then
+		${Echo} "Adding crontab entry for dailytasks.sh "
+		CRONTAB=`crontab -l 2>/dev/null | sed -re 's/^$//'`
+		if [ ! -z "${CRONTAB}" ]; then
+			CRONTAB="${CRONTAB}\n"
+		fi
+		${Echo} "${CRONTAB}0 23  *   *   *     ${dailyTasks} > /dev/null 2>&1" | crontab
 	fi
-}
+		# fetch crontab again to show it
+		CRONTAB=`crontab -l 2>/dev/null | sed -re 's/^$//'`
+	
+${Echo} "Crontab work complete, current crontab: ${CRONTAB} "
 
-restartTomcatService ()
-
-{
-	service tomcat6 restart
 }
 
 
@@ -1294,27 +1304,24 @@ fi
 
 askForSaveConfigToLocalDisk ()
 {
-echo -e "${my_local_override_msg}"
 
-# Since everything goes through the config process on the webpage, we do not need this anymore
+cAns=$(askYesNo "Save config" "Do you want to save theese config values?\n\nIf you save theese values the current config file will be ovverwritten.\n NOTE: No passwords will be saved.")
 
-# cAns=$(askYesNo "Save config" "Do you want to save theese config values?\n\nIf you save theese values the current config file will be ovverwritten.\n NOTE: No passwords will be saved.")
-# 
-# 	if [ "${cAns}" = "y" ]; then
-# 		writeConfigFile
-# 	fi
-# 
-# 	if [ "${GUIen}" = "y" ]; then
-# 		${whiptailBin} --backtitle "${my_ctl_federation} IDP Deployer" --title "Confirm" --scrolltext --clear --textbox ${downloadPath}/confirm.tx 20 75 3>&1 1>&2 2>&3
-# 	else
-# 		cat ${downloadPath}/confirm.tx
-# 	fi
-# 	cAns=$(askYesNo "Confirm" "Do you want to install this IDP with theese options?" "no")
-# 
-# 	rm ${downloadPath}/confirm.tx
-# 	if [ "${cAns}" = "n" ]; then
-# 		exit
-# 	fi
+	if [ "${cAns}" = "y" ]; then
+		writeConfigFile
+	fi
+
+	if [ "${GUIen}" = "y" ]; then
+		${whiptailBin} --backtitle "${my_ctl_federation} IDP Deployer" --title "Confirm" --scrolltext --clear --textbox ${downloadPath}/confirm.tx 20 75 3>&1 1>&2 2>&3
+	else
+		cat ${downloadPath}/confirm.tx
+	fi
+	cAns=$(askYesNo "Confirm" "Do you want to install this IDP with theese options?" "no")
+
+	rm ${downloadPath}/confirm.tx
+	if [ "${cAns}" = "n" ]; then
+		exit
+	fi
 
 }
 
@@ -1328,44 +1335,33 @@ ${Echo} "Previous installation found, performing upgrade."
 
 	eval ${distCmd1} &> >(tee -a ${statusFile})
 	cd /opt
-	currentShib=`ls -l /opt/shibboleth-identityprovider | awk '{print $NF}'`
+	currentShib=`ls -l /opt/${shibDir} | awk '{print $NF}'`
 	currentVer=`${Echo} ${currentShib} | awk -F\- '{print $NF}'`
 	if [ "${currentVer}" = "${shibVer}" ]; then
 		mv ${currentShib} ${currentShib}.${ts}
 	fi
 
-	if [ ! -f "${downloadPath}/shibboleth-identityprovider-${shibVer}-bin.zip" ]; then
+	if [ ! -f "${downloadPath}/${shibDir}-${shibVer}.tar.gz" ]; then
 		fetchAndUnzipShibbolethIdP
 	fi
-	#unzip -q ${downloadPath}/shibboleth-identityprovider-${shibVer}-bin.zip -d /opt
-	chmod -R 755 /opt/shibboleth-identityprovider-${shibVer}
+	tar xzf ${downloadPath}/${shibDir}-${shibVer}.tar.gz -C /opt
+	chmod -R 755 /opt/${shibDir}-${shibVer}
 
-        cp /opt/shibboleth-idp/metadata/idp-metadata.xml /opt/shibboleth-identityprovider/src/main/webapp/metadata.xml
-        tar zcfP ${bupFile} --remove-files /opt/shibboleth-idp
+	# Backup previous V2 environment
+        #tar zcfP ${bupFile} --remove-files /opt/shibboleth-idp
+        service tomcat6 stop
 
-	unlink /opt/shibboleth-identityprovider
-	ln -s /opt/shibboleth-identityprovider-${shibVer} /opt/shibboleth-identityprovider
+	if [ ! -d /opt/bak ]; then
+		cp -ar /opt/shibboleth-idp /opt/bak 2>/dev/null
+	fi
+
+        rm -rf /opt/shibboleth-idp
+
+	unlink /opt/${shibDir}
+	ln -s /opt/${shibDir}-${shibVer} /opt/${shibDir}
 
 	if [ -d "/opt/cas-client-${casVer}" ]; then
 		installCasClientIfEnabled
-	fi
-
-	if [ -d "/opt/ndn-shib-fticks" ]; then
-		if [ -z "`ls /opt/ndn-shib-fticks/target/*.jar`" ]; then
-			cd /opt/ndn-shib-fticks
-			mvn >> ${statusFile} 2>&1
-		fi
-		cp /opt/ndn-shib-fticks/target/*.jar /opt/shibboleth-identityprovider/lib
-	else
-		fticks=$(askYesNo "Send anonymous data" "Do you want to send anonymous usage data to ${my_ctl_federation}?\nThis is recommended")
-
-		if [ "${fticks}" != "n" ]; then
-			installFticksIfEnabled
-		fi
-	fi
-
-	if [ -d "/opt/mysql-connector-java-${mysqlConVer}/" ]; then
-		cp /opt/mysql-connector-java-${mysqlConVer}/mysql-connector-java-${mysqlConVer}-bin.jar /opt/shibboleth-identityprovider/lib/
 	fi
 
 	setJavaHome
@@ -1379,131 +1375,301 @@ fi
 }
 
 
-enableTomcatOnRestart ()
-{
+jettySetup() {
 
-# ensure proper start/stop at run level 3 for the machine are in place for tomcat and related services
-	if [ "${dist}" != "ubuntu" ]; then
-		ckCmd="/sbin/chkconfig"
-		ckArgs="--level 3"
-		ckState="on" 
-		ckServices="tomcat6"
+        #Installing a specific version of Jetty
 
-		for myService in $ckServices
-		do
-			${ckCmd} ${ckArgs} ${myService} ${ckState}
-		done
-	fi
+        # As of Aug 11, 2015, Jetty 9.3.x has not quieted down from having changes done.
+        # to mitigate issues: ( https://bugs.eclipse.org/bugs/show_bug.cgi?id=473321 )
+        #
+        # This Jetty setup will use a specific Jetty version placed in the ~/downloads directory
+        # Also be warned that the jetty site migrates links from the current jettyBaseURL to an archive
+        # at random times.
+
+		# Variable 'jetty9File' now originates from script.messages.sh to make it easier to 
+		# manage versions
+		
+        #jetty9File='jetty-distribution-9.2.13.v20150730.tar.gz'
+
+		# Ability to override version:
+		# To override the downloads folder containing the binary: jetty-distribution-9.2.13.v20150730.tar.gz
+        # uncomment the below variable assignment to dynamically fetch it instead:
+        # jettyBaseURL is defined in script.messages.sh
+
+        #jetty9File=`curl -s ${jettyBaseURL} | grep -oP "(?>)jetty-distribution.*tar.gz(?=&)"`
+        
+
+		jetty9Path=`basename ${jetty9File}  .tar.gz`
+		jetty9URL="${jettyBaseURL}${jetty9File}"
+
+		${Echo} "Preparing to install Jetty webserver ${jetty9File}"
+
+        if [ ! -s "${downloadPath}/${jetty9File}" ]; then
+                ${Echo} "Fetching Jetty from ${jetty9URL}"
+                ${fetchCmd} ${downloadPath}/${jetty9File} "{$jetty9URL}"
+        else
+        	${Echo} "Skipping Jetty download, it exists here: ${downloadPath}/${jetty9File}"
+                	
+        fi
+
+        # Manipulate Jetty configuration for the deployment
+        
+        cd /opt
+        tar zxf ${downloadPath}/${jetty9File} >> ${statusFile} 2>&1
+        cp -r /opt/${shibDir}/jetty-base /opt/${jetty9Path}/
+        ln -s /opt/${jetty9Path} /opt/jetty
+        sed -i 's/\# JETTY_HOME/JETTY_HOME=\/opt\/jetty/g' /opt/jetty/bin/jetty.sh
+        sed -i 's/\# JETTY_USER/JETTY_USER=jetty/g' /opt/jetty/bin/jetty.sh
+        sed -i 's/\# JETTY_BASE/JETTY_BASE=\/opt\/jetty\/jetty-base/g' /opt/jetty/bin/jetty.sh
+        sed -i 's/TMPDIR:-\/tmp/TMPDIR:-\/opt\/jetty\/jetty-base\/tmp/g' /opt/jetty/bin/jetty.sh
+        useradd -d /opt/jetty -s /bin/bash jetty
+        ln -s /opt/jetty/bin/jetty.sh /etc/init.d/jetty
+
+        if [ "${dist}" != "ubuntu" ]; then
+                chkconfig jetty on
+        else
+                update-rc.d jetty defaults
+        fi
+
+        cat ${Spath}/files/idp.ini | sed -re "s#ShIbBKeyPaSs#${pass}#;s#HtTpSkEyPaSs#${httpspass}#" > /opt/jetty/jetty-base/start.d/idp.ini
+
+        # Setting ownership
+        chown jetty:jetty /opt/jetty/ -R
+        chown -R jetty:jetty /opt/shibboleth-idp/
+
+        # ensure Jetty has proper startup environment for Java for all platforms
+        jettyDefaults="/etc/default/jetty"
+        jEnvString="export JAVA_HOME=${JAVA_HOME}"
+ 		jEnvPathString="export PATH=${PATH}:${JAVA_HOME}/bin"
+		${Echo} "${jEnvString}" >> ${jettyDefaults}
+       	${Echo} "${jEnvPathString}" >> ${jettyDefaults}
+        ${Echo} "Updated ${jettyDefaults} to add JAVA_HOME: ${JAVA_HOME} and java to PATH"
+
+	removeCiphers="TLS_RSA_WITH_AES_128_GCM_SHA256 TLS_RSA_WITH_AES_128_CBC_SHA256 TLS_RSA_WITH_AES_128_CBC_SHA TLS_RSA_WITH_AES_256_CBC_SHA SSL_RSA_WITH_3DES_EDE_CBC_SHA"
+	for cipher in $removeCiphers; do
+		sed -i "/${cipher}/d" /opt/jetty/jetty-base/etc/jetty.xml
+	done
 
 }
 
-invokeShibbolethInstallProcess ()
+
+restartJettyService ()
+
+{
+        if [ -f /var/run/jetty.pid ]; then
+                service jetty stop
+        fi
+        service jetty start
+
+        iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
+        iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 7443 -j ACCEPT
+        iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT
+        iptables -t nat -A PREROUTING -p tcp --dport 443 -j REDIRECT --to-port 7443
+        
+        if [ "${dist}" == "centos" ]; then
+		iptables-save > /etc/sysconfig/iptables
+        elif [ "${dist}" == "ubuntu" ]; then
+	 	iptables-save > /etc/iptables/rules.v4
+	fi
+
+	service iptables restart
+
+}
+
+
+patchShibbolethConfigs ()
+
 {
 
-	### Begin of SAML IdP installation Process
+	# patch shibboleth config files
+        ${Echo} "Patching config files"
+        mv /opt/shibboleth-idp/conf/attribute-filter.xml /opt/shibboleth-idp/conf/attribute-filter.xml.dist
+
+        ${Echo} "patchShibbolethConfigs:Overlaying attribute-filter.xml with CAF defaults"
+
+        cp ${Spath}/files/${my_ctl_federation}/attribute-filter.xml.template /opt/shibboleth-idp/conf/attribute-filter.xml
+        chmod ugo+r /opt/shibboleth-idp/conf/attribute-filter.xml
+
+        ${Echo} "patchShibbolethConfigs:Overlaying relying-filter.xml with CAF trusts"
+        cat ${Spath}/xml/${my_ctl_federation}/metadata-providers.xml > /opt/shibboleth-idp/conf/metadata-providers.xml
+        cat ${Spath}/xml/${my_ctl_federation}/attribute-resolver.xml > /opt/shibboleth-idp/conf/attribute-resolver.xml
+        cat ${Spath}/files/${my_ctl_federation}/relying-party.xml > /opt/shibboleth-idp/conf/relying-party.xml
+
+	if [ "${consentEnabled}" = "n" ]; then
+		sed -i 's#<bean parent="Shibboleth.SSO" p:postAuthenticationFlows="attribute-release" />#<bean parent="Shibboleth.SSO" />#;s#<bean parent="SAML2.SSO" p:postAuthenticationFlows="attribute-release" />#<bean parent="SAML2.SSO" />#' /opt/shibboleth-idp/conf/relying-party.xml
+	fi
+
+        if [ "${google}" != "n" ]; then
+                repStr='<!-- PLACEHOLDER DO NOT REMOVE -->'
+                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/google-filter.add" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-filter.xml
+                cat ${Spath}/xml/${my_ctl_federation}/google-relay.diff.template | sed -re "s/IdPfQdN/${certCN}/" > ${Spath}/xml/${my_ctl_federation}/google-relay.diff
+                files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/google-relay.diff"
+                patch /opt/shibboleth-idp/conf/relying-party.xml -i ${Spath}/xml/${my_ctl_federation}/google-relay.diff >> ${statusFile} 2>&1
+                cat ${Spath}/xml/${my_ctl_federation}/google.xml | sed -re "s/GoOgLeDoMaIn/${googleDom}/" > /opt/shibboleth-idp/metadata/google.xml
+        fi
+
+        if [ "${fticks}" != "n" ]; then
+                patch /opt/shibboleth-idp/conf/logback.xml -i ${Spath}/xml/${my_ctl_federation}/fticks.diff >> ${statusFile} 2>&1
+                touch /opt/shibboleth-idp/conf/fticks-key.txt
+                chown ${jettyUser}: /opt/shibboleth-idp/conf/fticks-key.txt
+        fi
+
+        if [ "${eptid}" != "n" ]; then
+                if [ -z "${epass}" ]; then
+                        epass=`${passGenCmd}`
+                        # grant sql access for shibboleth
+                        esalt=`openssl rand -base64 36 2>/dev/null`
+                        cat ${Spath}/xml/${my_ctl_federation}/eptid.sql.template | sed -re "s#SqLpAsSwOrD#${epass}#" > ${Spath}/xml/${my_ctl_federation}/eptid.sql
+                        files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.sql"
+
+                        ${Echo} "Create MySQL database and shibboleth user."
+                        mysql -uroot -p"${mysqlPass}" < ${Spath}/xml/${my_ctl_federation}/eptid.sql
+                        retval=$?
+                        if [ "${retval}" -ne 0 ]; then
+                                ${Echo} "Failed to create EPTID database, take a look in the file '${Spath}/xml/${my_ctl_federation}/eptid.sql.template' and corect the issue." >> ${messages}
+                                ${Echo} "Password for the database user can be found in: /opt/shibboleth-idp/conf/attribute-resolver.xml" >> ${messages}
+                        fi
+                fi
+
+                cat ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon.template \
+                        | sed -re "s#SqLpAsSwOrD#${epass}#;s#Large_Random_Salt_Value#${esalt}#" \
+                        > ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon
+                files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon"
+
+                repStr='<!-- EPTID RESOLVER PLACEHOLDER -->'
+                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.resolver" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+                repStr='<!-- EPTID ATTRIBUTE CONNECTOR PLACEHOLDER -->'
+                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+                repStr='<!-- EPTID PRINCIPAL CONNECTOR PLACEHOLDER -->'
+                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.princCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+                repStr='<!-- EPTID FILTER PLACEHOLDER -->'
+                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.filter" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-filter.xml
+        fi
+
+        repStr='<!-- LDAP CONNECTOR PLACEHOLDER -->'
+        sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/ldapconn.txt" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+	echo "applying chown "
+	chmod o+r /opt/shibboleth-idp/conf/attribute-filter.xml
+
+}
+
+
+performPostUpgradeSteps ()
+{
+        if [ "${upgrade}" -eq 1 ]; then
+                cat /opt/bak/credentials/idp.crt > /opt/shibboleth-idp/credentials/idp-signing.crt
+                cat /opt/bak/credentials/idp.key > /opt/shibboleth-idp/credentials/idp-signing.key
+        fi
+
+}
+
+invokeShibbolethInstallProcessJetty9 ()
+{
+
+        ### Begin of SAML IdP installation Process
+
+	containerDist="Jetty9"
+
+	# check for installed IDP
+	setVarUpgradeType
+
+	setJavaHome
+
+	# Override per federation
+	performStepsForShibbolethUpgradeIfRequired
 
 	if [ "${installer_interactive}" = "y" ]
 	then
-		${whiptailBin} --backtitle "${GUIbacktitle}" --title "Deploy Shibboleth customizations" --defaultno --yes-button "Yes, proceed" --no-button "No, back to main menu" --yesno --clear -- "Proceed with deploying Shibboleth and related settings?" ${whipSize} 3>&1 1>&2 2>&3
-		continueFwipe=$?
-	else
-		continueFwipe=0
+		askForConfigurationData
+		prepConfirmBox
+		askForSaveConfigToLocalDisk
 	fi
 
-	if [ "${continueFwipe}" -eq 0 ]
-	then
-
-		# check for installed IDP
-		setVarUpgradeType
-
-		# Override per federation
-		performStepsForShibbolethUpgradeIfRequired
+	notifyMessageDeployBeginning
 
 
-		if [ "${installer_interactive}" = "y" ]
-		then
-			askForConfigurationData
-			prepConfirmBox
-			askForSaveConfigToLocalDisk
-		fi
+	setVarPrepType
+	setVarCertCN
+	setVarIdPScope
+	
+	installDependanciesForInstallation
+
+	setJavaCACerts
+
+	setJavaCryptographyExtensions
 
 
-		notifyMessageDeployBeginning
+	generatePasswordsForSubsystems
 
+	patchFirewall
 
-		setVarPrepType
-		setVarCertCN
+	# installEPEL Sept 26 - no longer needed since Maven is installed via zip
 
-		installDependanciesForInstallation
+	[[ "${upgrade}" -ne 1 ]] && fetchAndUnzipShibbolethIdP
 
-		fetchJavaIfNeeded
+	configShibbolethXMLAttributeResolverForLDAP
 
-		setJavaHome
+	runShibbolethInstaller
 
-		setJavaCACerts
+        installEPTIDSupport
 
-		generatePasswordsForSubsystems
+	installCasClientIfEnabled
 
-		installTomcat
+	createCertificatePathAndHome
 
-		# moved from above tomcat, to here just after.
+	# Override per federation
+	installCertificates
 
-		# installEPEL Sept 26 - no longer needed since Maven is installed via zip
+	configShibbolethSSLForLDAPJavaKeystore
 
-		[[ "${upgrade}" -ne 1 ]] && fetchAndUnzipShibbolethIdP
+	# Override per federation
+	configContainerSSLServerKey
 
+	# Override per federation
+	configShibbolethFederationValidationKey
 
-		installCasClientIfEnabled
+        patchShibbolethConfigs
+        
+    patchConfigCustomizations
 
+	performPostUpgradeSteps
 
-		installFticksIfEnabled
+        jettySetup
 
+	updateMachineTime
 
-		installEPTIDSupport
+	updateMachineHealthCrontab
 
-
-		configTomcatServerXMLForPasswd
-
-		configShibbolethXMLAttributeResolverForLDAP
-
-
-		runShibbolethInstaller
-
-
-		createCertificatePathAndHome
-
-
-		# Override per federation
-		installCertificates
-
-		configShibbolethSSLForLDAPJavaKeystore
-
-		# Override per federation
-		configTomcatSSLServerKey
-
-		patchShibbolethLDAPLoginConfigs
-
-		patchTomcatConfigs
-
-		# Override per federation
-		configShibbolethFederationValidationKey
-
-		patchShibbolethConfigs
-
-		updateMachineTime
-
-		updateTomcatAddingIDPWar
-
-
-		restartTomcatService
-
-		enableTomcatOnRestart
-
-	else
-
-		${whiptailBin} --backtitle "${GUIbacktitle}" --title "Shibboleth customization aborted" --msgbox "Shibboleth customizations WERE NOT done. Choose OK to return to main menu" ${whipSize} 
-
-	fi
-
+	restartJettyService
 
 }
+
+
+invokeShibbolethUpgradeProcess()
+{
+        if [ -a "/opt/${jetty9Path}/bin/jetty.sh" ]; then
+                echo "Jetty detected as installed"
+        else
+                if [ ${dist} == "ubuntu" ]; then
+                        apt-get -y remove --purge tomcat6 openjdk* default-jre java*
+                else
+                        yum -y remove tomcat* java*
+                fi
+                cleanBadInstall "NotExit"
+                fticks="y"
+                eptid="n"
+                invokeShibbolethInstallProcessJetty9
+        fi
+}
+
+invokeShibbolethInstallProcess () ##Default
+{
+
+        invokeShibbolethInstallProcessJetty9
+
+}
+
